--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ h1{
     border: 2px solid rgb(119, 119, 119);
     border-radius: 5px;
 }
-
 #display{
     background-color: lightblue;
     width: 461px;
@@ -51,6 +50,21 @@ h1{
     display: flex;
     flex-direction: row;
     gap: 5px;
+}
+.operation{
+    background-color: rgb(181, 178, 228);
+}
+#clear{
+    background-color: rgb(226, 176, 176);
+}
+.num{
+    background-color: rgb(250, 234, 215);
+}
+#equals{
+    background-color: rgb(170, 221, 204);
+}
+#backspace{
+    background-color: rgb(249, 250, 215);
 }
 .defaultSquare{
     width: 75px;
